--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,10 @@ header ul li {
   font-size: 30px;
 }
 
+#arrow i:hover {
+  color: #fff;
+}
+
 .about p {
   max-width: 600px;
   margin: 0 auto;
@@ -62,8 +66,26 @@ header ul li {
 
 .form input {
   width: 50%;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px 0 0 5px;
 }
 
 .form button {
   width: 15%;
+  padding: 5px 10px;
+  background: linear-gradient(to right, #d2bc20 50%, #464646 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  color: #fff;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  transition: all 300ms ease-out;
+  border-radius: 0 5px 5px 0;
+  margin: 20px 0 0  0;
+}
+
+.form button:hover {
+  background-position: left bottom;
 }
