--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ header {
   align-items: center;
   padding: 10px;
   box-shadow: 1px 1px 10px 1px #fff;
+  margin-bottom: 50px;
 }
 
 header ul {
@@ -46,6 +47,7 @@ header ul li {
 }
 
 .container .name h5 {
+  margin-top: 15px;
   font-size: 30px;
 }
 
@@ -87,6 +89,7 @@ header ul li {
 .form {
   width: 40%;
   margin: 0 auto;
+  margin-top: 30px;
 }
 
 .form input {
@@ -113,4 +116,26 @@ header ul li {
 
 .form button:hover {
   background-position: left bottom;
+}
+
+@media only screen and (max-width: 768px) {
+  .form {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .container .name h1 {
+    font-size: 30px;
+  }
+
+  .container .name h5 {
+    font-size: 15px;
+  }
+
+  #about p {
+    max-width: 60%;
+    text-align: justify;
+    font-size: 10px;
+  }
 }
